// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DismissibleItem component DismissibleItem empty snapshot test Should render correctly 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
/>
`;

exports[`DismissibleItem component Function toggleModal snapshot test Should execute and render correctly 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
/>
`;

exports[`DismissibleItem component Function toggleModal snapshot test Should execute and render correctly 2`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
>
  <div
    aria-label="dismissible-edit-item"
    className="css-view-g5y9jx"
    dir={null}
  >
    <div>
      <div
        className="css-text-146c3p1"
        dir="auto"
      />
    </div>
  </div>
</div>
`;

exports[`DismissibleItem component Function toggleModal snapshot test Should execute and render correctly 3`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
/>
`;
